--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,10 @@ services:
       - db
 
   db:
-    image: postgres
+    image: postgres:15-bullseeye
     volumes:
       - db-data:/var/lib/postgresql/data
     environment:
+      - 'POSTGRES_HOST_AUTH_METHOD=trust'
       - 'POSTGRES_USER=postgres'
       - 'POSTGRES_PASSWORD=postgres'
